# UD_Japanese_Maxmatch

./: CMakeLists.txt  README.md
src/: main.cpp
src/data/: dictionary.cpp  dictionary.h  maxmatch.cpp  maxmatch.h
src/utility/: filehandling.cpp  filehandling.h  parse.cpp  parse.h
